--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 
     compile 'org.hsqldb:hsqldb:2.4.0'
 
+    compile 'io.springfox:springfox-swagger2:2.4.0'
+    compile 'io.springfox:springfox-swagger-ui:2.4.0'
+
     testCompile 'junit:junit'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
